<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white">

    <FrameLayout
        android:id="@+id/FL"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toTopOf="@+id/fragmentDuBas"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

    </FrameLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/fragmentDuBas"
        android:layout_width="match_parent"
        android:layout_height="77dp"
        android:background="@drawable/rounded_on_top_blue_button_background"
        android:padding="15dp"
        android:visibility="visible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <LinearLayout
            android:id="@+id/btnAccueilNav"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/btnTraitementsNav"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <ImageView
                android:id="@+id/imageViewAccueil"
                android:layout_width="wrap_content"
                android:layout_height="24dp"
                app:srcCompat="@drawable/accueil"
                app:tint="@color/black" />

            <TextView
                android:id="@+id/textViewAccueil"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:fontFamily="@font/quicksand_semibold"
                android:gravity="center"
                android:text="@string/accueil"
                android:textColor="@color/black"
                android:textSize="15sp" />
        </LinearLayout>


        <LinearLayout
            android:id="@+id/btnTraitementsNav"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginStart="6dp"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/btnMessagesNav"
            app:layout_constraintStart_toEndOf="@+id/btnAccueilNav"
            app:layout_constraintTop_toTopOf="parent">


            <ImageView
                android:id="@+id/imageViewTraitement"
                android:layout_width="wrap_content"
                android:layout_height="24dp"
                app:srcCompat="@drawable/traitements"
                app:tint="@color/black" />

            <TextView
                android:id="@+id/textViewTraitement"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:fontFamily="@font/quicksand_semibold"
                android:gravity="center"
                android:text="@string/traitements"
                android:textColor="@color/black"
                android:textSize="15sp" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/btnMessagesNav"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginStart="6dp"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/btnTraitementsNav"
            app:layout_constraintTop_toTopOf="parent">

            <ImageView
                android:id="@+id/imageViewMessages"
                android:layout_width="wrap_content"
                android:layout_height="24dp"
                app:srcCompat="@drawable/messages"
                app:tint="@color/black" />

            <TextView
                android:id="@+id/textViewMessages"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:fontFamily="@font/quicksand_semibold"
                android:gravity="center"
                android:text="Contact"
                android:textColor="@color/black"
                android:textSize="15sp" />


        </LinearLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.constraintlayout.widget.ConstraintLayout>
