...
        android:textColor="@color/black"
        android:textSize="14sp"
        android:textStyle="normal"
        android:visibility="visible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/creerContact" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerViewMessages"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:paddingBottom="16dp"
...
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/creerContact"
        app:layout_constraintTop_toBottomOf="@+id/creerContact"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/titreContact"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/quicksand_bold"
        android:gravity="center"
        android:text="Contacts"
        android:textColor="@color/black"
...
