...

    <ScrollView
        android:id="@+id/scroll_info_contact"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginBottom="30dp"
        app:layout_constraintBottom_toTopOf="@+id/confirmer"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
...
            <ImageView
                android:id="@+id/btnEmail"
                android:layout_width="27dp"
                android:layout_height="27dp"
                android:visibility="invisible"
                app:layout_constraintEnd_toEndOf="@+id/retour_schema_contact"
                app:layout_constraintTop_toTopOf="@+id/mailMedecin"
                app:srcCompat="@drawable/email" />

            <TextView
                android:id="@+id/textView15"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
...
